<resources>
    <string name="app_name">NavProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img1_btn">DISPLAY IMAGE 1</string>
    <string name="img2_btn">DISPLAY IMAGE 2</string>
    <string name="img3_btn">DISPLAY IMAGE 3</string>
    <string name="noImg_txt">Image Displays Here</string>
    <string name="img1_txt">Image 1</string>
    <string name="img2_txt">Image 2</string>
    <string name="img3_txt">Image 3</string>
</resources>